fix grid spacing

--- a/src/components/services.module.scss
+++ b/src/components/services.module.scss
@@ -121,7 +121,7 @@
 .session {
     display: grid;
     //grid-template-rows: 50px 100px 50px;
-    grid-template-rows: 40px 30px 50px;
+    grid-template-rows: 40px 40px 50px;
     grid-template-areas: "sessionTime"
     "sessionDescription"
     "sessionLink";
@@ -135,7 +135,7 @@
 
     @media only screen and (max-width: 968px) {
         //grid-template-rows: 50px 110px 50px;
-        grid-template-rows: 40px 40px 50px;
+        grid-template-rows: 40px 50px 50px;
         font-size: 0.9em;
     }
 }
